将openssl编译为静态库，并保留ossl_static.pdb调试信息文件

--- a/example/helloopenssl/helloopenssl.vcxproj
+++ b/example/helloopenssl/helloopenssl.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>E:\Github\OpenSSL\openssl-1.1.1h\x64\Debug\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
